[package]
name = "power-btn-read"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evdev = { version="0.12.1", features=["tokio"]}
futures = "0.3.30"
tokio = { version="1.35.1", features=["fs", "rt-multi-thread", "macros"] }
